fix: Add integration tests and fix null exception